# mmCoreAndDevices

./: CLAUDE.md  micromanager.sln
DeviceAdapters/: configure.ac
DeviceAdapters/EvidentIX85/.claude/: settings.local.json
DeviceAdapters/Prior/: Prior.cpp  Prior.vcxproj  Prior.vcxproj.filters  PureFocus.cpp  PureFocus.h  prior.h
DeviceAdapters/PriorNew/: Makefile.am  PriorBase.h  PriorHub.cpp  PriorHub.h  PriorLumen.cpp  PriorLumen.h  PriorNanoZStage.cpp  PriorNanoZStage.h  PriorNew.cpp  PriorNew.h  PriorNew.vcxproj  PriorNew.vcxproj.filters  PriorPeripheralBase.h  PriorProScanHub.cpp  PriorProScanHub.h  PriorShutter.cpp  PriorShutter.h  PriorTTLShutter.cpp  PriorTTLShutter.h  PriorWheel.cpp  PriorWheel.h  PriorXYStage.cpp  PriorXYStage.h  PriorZStage.cpp  PriorZStage.h
DeviceAdapters/TUCam/: MMTUCam.cpp  MMTUCam.h
DeviceAdapters/Utilities/: PropertyMagnifier.cpp  Utilities.cpp  Utilities.h  Utilities.vcxproj  Utilities.vcxproj.filters
DeviceAdapters/ZeissCAN/: ZeissCAN.h
