
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_PriorNew.la
libmmgr_dal_PriorNew_la_SOURCES = \
	PriorNew.h \
	PriorNew.cpp \
	PriorHub.h \
	PriorHub.cpp \
	PriorProScanHub.h \
	PriorProScanHub.cpp \
	PriorBase.h \
	PriorPeripheralBase.h \
	PriorXYStage.h \
	PriorXYStage.cpp \
	PriorZStage.h \
	PriorZStage.cpp \
	PriorNanoZStage.h \
	PriorNanoZStage.cpp \
	PriorShutter.h \
	PriorShutter.cpp \
	PriorWheel.h \
	PriorWheel.cpp \
	PriorLumen.h \
	PriorLumen.cpp \
	PriorTTLShutter.h \
	PriorTTLShutter.cpp
libmmgr_dal_PriorNew_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_PriorNew_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = PriorNew.vcxproj license.txt
